<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/match_layout"
        android:background="@color/silver"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/gradient_detail"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/wrap_layout"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/nama_profile"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        style="@style/default_layout"
                        android:layout_width="150dp"
                        android:layout_marginTop="0dp"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        tools:ignore="RtlSymmetry,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_baseline_location_on_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:id="@+id/tv_location"
                            style="@style/wrap_layout"
                            android:layout_gravity="center"
                            android:paddingStart="20dp"
                            android:text="@string/location"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/default_layout"
                        android:layout_marginTop="0dp"
                        android:layout_width="200dp"
                        android:orientation="horizontal"
                        android:paddingStart="25dp"
                        tools:ignore="RtlSymmetry,UseCompoundDrawables">

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_baseline_work_24"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:id="@+id/tv_company"
                            style="@style/wrap_layout"
                            android:layout_width="150dp"

                            android:layout_gravity="center"
                            android:paddingStart="20dp"
                            android:text="@string/work"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            tools:ignore="RtlSymmetry" />
                    </LinearLayout>


                </LinearLayout>



            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="380dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                app:cardCornerRadius="13dp">

                <LinearLayout
                    style="@style/match_layout"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/wrap_layout"
                            android:text="@string/following"
                            android:textSize="20sp"
                            android:textColor="@color/purple_700"/>

                        <TextView
                            android:id="@+id/tv_following"
                            style="@style/wrap_layout"
                            android:paddingTop="10dp"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/wrap_layout"
                            android:text="@string/followers"
                            android:textSize="20sp"
                            android:textColor="@color/purple_700"/>

                        <TextView
                            android:id="@+id/tv_followers"
                            style="@style/wrap_layout"
                            android:paddingTop="10dp"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/wrap_layout"
                            android:text="@string/repositories"
                            android:textSize="20sp"
                            android:textColor="@color/purple_700"/>

                        <TextView
                            android:id="@+id/tv_repositories"
                            style="@style/wrap_layout"
                            android:paddingTop="10dp"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            tools:ignore="SmallSp" />


                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/silver"
                app:tabTextColor="@color/purple_700"/>
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_button"
        android:backgroundTint="@color/purple_500"
        android:clickable="true"
        android:layout_margin="16dp"
        android:layout_gravity="end"
        app:fabSize="normal"
        android:src="@drawable/ic_baseline_favorite_border_24"/>
    </LinearLayout>
</ScrollView>